Alignment Fixing

--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ body {
     font-family: "Barlow", sans-serif;
 }
 
+
+/* FOR BODY LOCK SCREEN TILL WHEN THE NAV SIDEBAR IS OPEN , also some js is in script.js*/
+body.no-scroll {
+    overflow: hidden;
+}
+
 button{
     cursor: pointer;
 }
@@ -50,7 +56,7 @@ img{
 .nav-mid-content li {
     list-style: none;
     font-family: "Barlow",sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 150%;
     letter-spacing: 0.15px;
     cursor: pointer;
@@ -95,6 +101,9 @@ img{
     flex-direction: column;
     gap: 5px;
     cursor: pointer;
+
+    position: relative;   /* 👈 ADD THIS */
+    z-index: 1004;        /* 👈 ADD THIS */
 }
 
 .hamburger span {
@@ -1078,17 +1087,19 @@ img{
     line-height: 150%;
     letter-spacing: 0.15px;
     color: #000000;
+
+    /* text-align: center; */
 }
 
 /* FEATURES */
-.features {
+.discover-how-top-right .features {
     display: flex;
+    flex-direction: row;
     gap: 20px;
 }
 
 .feature {
     width: 50%;
-
     display: flex;
     flex-direction: column;
     gap: 14px;
@@ -1120,6 +1131,8 @@ img{
     border-radius: 20px;
     display: block;
 }
+
+
 
 
 
@@ -1344,11 +1357,8 @@ img{
 .Effective-and-Reliable-outer-container .er-video-container{
     width: 100%;
     
-    
-
     position: absolute;
     inset: 0;
-    
 }
 
 .Effective-and-Reliable-outer-container .er-video-container video{
@@ -1379,10 +1389,11 @@ img{
     transform: none;
     margin: auto;
     height: 100%;
+    padding: 0 20px;
     
     display: flex;
     flex-direction: column;
-    gap: 80px;
+    gap: 50px;
 
     overflow: hidden;
 
@@ -1437,6 +1448,7 @@ img{
 .overlay-upper-right .upper-right-btn-wrapper{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: flex-start;
     gap: 20px;
     
@@ -1444,7 +1456,8 @@ img{
 
 .upper-right-btn-wrapper .upper-right-learnmore-btn{
 
-    width: 197.46px;
+    max-width: 197.46px;
+    padding: 20px;
     height: 54px;
     border-radius: 12px;
     border: 1px solid #ffffff;
@@ -1474,8 +1487,6 @@ img{
 .upper-right-btn-wrapper .upper-right-learnmore-btn img{
     width: 14px;
     height: 14px;
-
-
 }
 
 .upper-right-btn-wrapper .upper-right-learnmore-btn:hover{
@@ -1498,11 +1509,11 @@ img{
 
 .upper-right-btn-wrapper .upper-right-contactus-btn{
 
-    width: 186px;
+    max-width: 186px;
     height: 54px;
     border-radius: 12px;
     border: 1px solid #ffffff;
-
+    padding: 20px;
 
     display: flex;
     flex-direction: row;
@@ -1582,7 +1593,6 @@ img{
     margin: 0px;
     color: #ffffff;
 }
-
 
 
 
@@ -1960,6 +1970,9 @@ img{
 
     color: #000000;
 }
+
+
+
 
 
 
